tests/NormalTests/paczka1/small_fuzzy/43857171.err
Error in line 2: 5oXov7Sg A556 94,25
Error in line 3: DLP A556 10,6
Error in line 1: KGtE5 A426 86,8
